@@ -7,6 +7,10 @@ LABEL maintainer="Sergey Royz <zjor.se@gmail.com>" \
 
 EXPOSE 8080
 
+RUN mkdir storage
+RUN echo '[]' >> storage/users.json
+RUN echo '[]' >> storage/wishlistItems.json
+
 ADD "target/wishlist-bot.jar" "service.jar"
 
-CMD ["sh", "-c", "java -jar service.jar"]
+CMD ["sh", "-c", "java --enable-preview -jar service.jar"]
